--- a/kailash/public/index.html
+++ b/kailash/public/index.html
@@ -10,8 +10,10 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Shadows+Into+Light&family=Source+Sans+Pro:wght@200&display=swap"
+			href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Shadows+Into+Light&family=Source+Sans+Pro:wght@200&family=Zeyada&display=swap"
 			rel="stylesheet"
 		/>
 
